# Align4

./: .gitignore  CMakeLists.txt
src/: ai.c  gameboard.c  main.c
src/include/: ai.h  gameboard.h
test/: test_ai.c  test_gameboard.c  test_main.c
test/include/: test_ai.h  test_gameboard.h
